# UoA_Action

./: .gitmodules  CMakeLists.txt  README.md  package.xml
2nd_year_evaluation/EvaluationAgent/: agent.json
2nd_year_evaluation/EvaluationAgent/entities/: DoctorNameEntity.json  DoctorNameEntity_entries_en.json  PrescriptionEntity.json  PrescriptionEntity_entries_en.json
2nd_year_evaluation/EvaluationAgent/intents/: Default Fallback Intent.json  Default Welcome Intent.json  GetAddressIntent.json  GetAddressIntent_usersays_en.json  GetAppointmentTimeIntent.json  GetAppointmentTimeIntent_usersays_en.json  GetDoctorNameKnownIntent.json  GetDoctorNameKnownIntent_usersays_en.json  GetDoctorNameUnknownIntent.json  GetDoctorNameUnknownIntent_usersays_en.json  GetNameIntent.json  GetNameIntent_usersays_en.json  GetWaitTimeIntent.json  GetWaitTimeIntent_usersays_en.json  (+13 more)
action_generator/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
action_generator/src/: action_generator.cpp  action_generator.cpp~
action_interface/: CMakeLists.txt  package.xml
action_interface/src/: action_interface_node.py
node/: node_KistAction.cpp
silbot3_shri_perception/: CMakeLists.txt  package.xml
silbot3_shri_perception/config/: person_detection.yaml  speech_activity.yaml
silbot3_shri_perception/src/: person_detection.py  speech_activity.py
silbot_interface/: CMakeLists.txt~  package.xml  package.xml~
silbot_interface/include/: SilbotAlgorithm.cpp  SilbotAlgorithm.cpp~
silbot_interface/src/: silbot_interface.cpp  silbot_interface_node.py
uoa_bringup/: CMakeLists.txt  deeptask_waypoint.yaml  package.xml
uoa_bringup/launch/: bringup_silbot3.launch
(+3 files in other folders)
