<?xml version="1.0"?>
<package format="2">
  <name>action_interface</name>
  <version>0.0.0</version>
  <description>The action_interface package</description>

  <maintainer email="b.ahn@auckland.ac.nz">Byeong-Kyu Ahn</maintainer>
  <author email="b.ahn@auckland.ac.nz">Byeong-Kyu Ahn</author>
  <license>BSD</license>
  <url type="Repository">https://github.com/deep-task/UoA_Action</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
