<?xml version="1.0"?>
<package>
  <name>silbot_interface</name>
  <version>0.0.0</version>
  <description>The silbot_interface package</description>
  <maintainer email="kist@todo.todo">kist</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
